--- a/src/App.css
+++ b/src/App.css
@@ -69,7 +69,9 @@
     border-color: #01468e; 
 }
 .btn-outline-custom {
-    border-color: #01468e; /* Navy blue border color */
+    border-color: #01468e; 
 }
-	
+.active {
+	color: green !important; 
+  }	
 	
