--- a/src/App.css
+++ b/src/App.css
@@ -37,9 +37,6 @@
 	}
 }
 
-.text-fed {
-	color: #01468e;
-}
 .icon-text .text {
 	display: none;
 }
@@ -47,51 +44,75 @@
 .icon-text:hover .text {
 	display: inline;
 }
+
 .align-left {
 	text-align: left;
 }
 
-.bg-fed {
-	background-color: #01468e;
-}
-
-.btn-fed {
-	color: #ffffff;
-	background-color: #01468e;
-}
-
-.btn-fed:hover {
-	background-color: #002c5c;
-	color: white;
-}
-
-.btn-outline-fed:hover {
-	color: #ffffff;
-	background-color: #01468e;
-	border-color: #01468e;
-}
-.btn-outline-fed {
-	border-color: #01468e;
-}
 .active {
 	color: green !important;
 }
 
+.text-fed {
+	color: #01468e;
+}
+
+.bg-fed {
+	background-color: #00468e;
+}
+
+.btn-fed {
+	color: #ffffff;
+	background-color: #00468e;
+}
+
+.btn-fed:hover {
+	background-color: #00356b;
+	color: white;
+}
+
+.btn-outline-fed {
+	border-color: #00468e;
+}
+
+.btn-outline-fed:hover {
+	color: #ffffff;
+	background-color: #00468e;
+	border-color: #00468e;
+}
+
+.btn-circle {
+	padding: 3px 8px;
+	border-radius: 100%;
+}
+
 .sidebar {
 	height: 100%;
+	min-height: calc(100vh - 145px);
 	transition: all 0.3s ease;
-  }
-  
-  .sidebar .nav .nav-item .nav-link {
+}
+
+.sidebar .nav .nav-item .nav-link {
 	color: #fff;
-	background-color: #003b7b;
+	background-color: #003e7d;
 	margin: 5px 15px;
 	padding: 15px 20px;
 	border-radius: 0.5rem;
 	transition: all 0.3s ease;
-  }
-  
-  .sidebar .nav .nav-item .nav-link:hover {
-	background-color: #002c5c;
+}
+
+.sidebar .nav .nav-item .nav-link:hover {
+	background-color: #002347;
 	border-left: 5px solid #f7a600;
-  }
+}
+
+.sidebar .nav .nav-item .nav-link.active {
+	color: #fff !important;
+	background-color: #00356b;
+	border-left: 5px solid #f7a600;
+}
+
+.sidebar .nav .nav-item .nav-link.active:hover {
+	background-color: #002347;
+	border-left: 5px solid #f7a600;
+}
